# c02dashboard

./: Cargo.toml  Justfile  README.md  flake.nix  install.sh  node-reds-script.sh  post_fake.sh  tailwind.config.js
migrations/: 0001_init.sql
src/: auth.rs  db.rs  handlers.rs  input.css  lib.rs  main.rs  models.rs  notifier.rs  ntfy.rs  state.rs  templates.rs
static/: output.css
templates/: _base.html  dashboard.html  index.html  settings.html
tests/: handlers.rs  notifier.rs
tests/common/: mod.rs
