[package]
name = "ntfy-sender"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
minijinja = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate"] }
rand = "0.8"

[dev-dependencies]
wiremock       = "0.6"
tower          = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
